--- a/infra/k8s/mfe-container-depl.yaml
+++ b/infra/k8s/mfe-container-depl.yaml
@@ -19,13 +19,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mfe-container-srv
+  name: mfe-container-service
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: mfe-container
   ports:
     - name: mfe-container
       protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 4000
+      targetPort: 4000
